# Analysis-and-BigData

./: README.md  pyproject.toml
1. AB_testing/: AB_testing.py
3. Excel_parse/: db_connection.py  parse_excel_to_db.py  ФСД дз4.xlsx
4. MapReduce/: Mapping.py  list1.csv  list2.csv  list3.csv
5. GA deap/: genetic algorithm.py
