[tool.poetry]
name = "labs"
version = "0.1.0"
description = ""
authors = ["Babin Igor <quasar360@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
jinja2 = "^3.1.3"
tabulate = "^0.9.0"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
black = {extras = ["d"], version = "^24.1.1"}
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
